<resources>
    <string name="app_name">Disciplined</string>
    <string name="title_activity_new_task">NewTask</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_task">SetTask</string>
    <string name="remove">Remove</string>
    <string name="done">DONE</string>
    <string name="edite">Edite</string>
    <string name="no_alart_set_yet">No Alarm set yet :(</string>
    <string name="go_to">Go To</string>
    <string name="just_once">just once</string>
    <string name="dd_mm_yyyy">dd/mm/YYYY</string>
    <string name="mm_hh">MM:HH</string>
    <string name="importance_from_1_to_10">importance from 1 to 10</string>
    <string name="repeat_every">Repeat every…</string>
    <string name="add_a_remainder">Add a Reminder :)</string>
    <string name="more_detiles">More Detiles…</string>
    <string name="_00_00">00:00</string>
    <string name="save">Save</string>
    <string name="no_remainder_set_yet">No Reminder set yet :(</string>
    <string name="add_a_alert">Add a Alarm :)</string>
    <string name="none">None</string>
    <string name="sound_and_volume">Sound and Volume</string>
    <string name="vibration">Vibration</string>
    <string name="no_alert_set_yet">No Alert set yet :(</string>
    <string name="task_name">Task Name</string>
    <string name="snooze">Snooze</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="don_t_forget_to_finsh_this">Don\'t forget to finsh this</string>
    <string name="weekend">weekend</string>
    <string name="work_day">work day</string>
    <string name="dlete">Dlete</string>
    <string name="dissmes">Dissmes</string>
    <string name="record_a_voice_note">Record a voice Note</string>
    <string name="interval">Interval</string>
    <string name="repeat">Repeat</string>
    <string name="off">Off</string>
    <string name="Alarms"> Alarms</string>
    <string name="Reminders"> Reminders</string>
    <string name="time_is_up">Time is up!</string>
    <string name="on">On</string>
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="Dontforgetto">Don\'t forget to  </string>
    <string name="notImportent">Not important ,Do it if there is time</string>
    <string name="easy">easy ,but i will do it</string>
    <string name="notEseay">Not easy , but must do it</string>
    <string name="hard">Hard,important and have to do it!</string>
    <string name="minuteConti">minute, Continuously</string>
    <string name="minute">minute,</string>
    <string name="time">times</string>
    <string name="enteravalidTime">enter a valid Time!</string>
    <string name="mustbeatitleintheremainder">must be a title in the reminder!</string>
    <string name="choseasnooze">chose a snooze!</string>
    <string name="EnteravalidSound">Enter a valid Sound</string>
    <string name="mustbeatitleinthealarm">must be a title in the alarm!</string>
    <string name="ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Saved">Saved</string>
    <string name="Am">A.M.</string>
    <string name="pm">P.M.</string>
    <string name="gettingTodaytasks">getting Today tasks...</string>
    <string name="AllWeekend">All Weekend</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="AllWorkDays">All Work Days</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="tooLongtaskorEmpty">too Long task or Empty!!</string>
    <string name="interavalidinfo">inter a valid info</string>
    <string name="invalidDate">invalid Date!</string>
    <string name="invalidTime">invalid Time!</string>
    <string name="deletTask">Are you sure you want to delete this TASK ?</string>
    <string name="no">No</string>
    <string name="Confirm">Confirm</string>
    <string name="Screenoverlaydetected">Screen overlay detected</string>
    <string name="toMake"><![CDATA[Hi :) To make this app works perfectly you have to turn on the screen overlay from SETTING > APPS]]></string>
    <string name="OPENSETTINGS">OPEN SETTINGS</string>
    <string name="alramSittng">alarm Sitting</string>
    <string name="title">Title</string>
    <string name="importance">importance</string>
    <string name="date">date</string>
    <string name="order_by">order by...</string>

</resources>
