<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newRemainderLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900"
    android:orientation="vertical"
    tools:context=".addRemainders">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save_remainder2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_rounded_accent"
            android:text="@string/save"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/grey_900" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/alarm_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/save_remainder2"
            android:layout_toStartOf="@id/remainder_time"
            android:textColorHint="@color/grey_40"

            >


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/reminder_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name"
                android:textColor="@android:color/white"
                android:theme="@style/Theme.AppCompat.Yellow" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/remainder_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/save_remainder2"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/time"
            android:drawablePadding="3dp"
            android:padding="3dp"
            android:text="@string/_00_00"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFC107" />



    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_middle" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/txt_area_dark_yellow"
        android:padding="@dimen/spacing_large"
        android:textColorHint="@color/grey_40">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/reminder_detaile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/more_detiles"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:minLines="3"
            android:textColor="@android:color/white"
            android:theme="@style/Theme.AppCompat.Yellow" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>