<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_400"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewTask"
    tools:showIn="@layout/activity_new_task">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_900"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/spacing_large"
                android:scrollbars="none"
                android:scrollingCache="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        >            <requestFocus />
                    </View>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_40">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/titleTask"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/task_name"
                            android:textColor="@android:color/white"
                            android:theme="@style/Theme.AppCompat.Yellow" />

                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/txt_area_dark_yellow"
                        android:padding="@dimen/spacing_large"
                        android:textColorHint="@color/grey_40">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/detaileTask"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="top"
                            android:hint="@string/more_detiles"
                            android:inputType="textMultiLine"
                            android:maxLines="12"
                            android:minLines="7"
                            android:textColor="@android:color/white"
                            android:theme="@style/Theme.AppCompat.Yellow" />

                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_middle" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/taskdate_pick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_rounded_accent"
                            android:paddingLeft="@dimen/spacing_xlarge"
                            android:paddingRight="@dimen/spacing_xlarge"
                            android:hint="@string/dd_mm_yyyy"
                            android:clickable="true"
                            android:textAppearance="@android:style/TextAppearance.Medium"
                            android:textColor="@color/grey_1000"
                            android:focusable="true" />

                        <Button
                            android:id="@+id/taskTiem_pick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/btn_rounded_accent"
                            android:paddingLeft="@dimen/spacing_xlarge"
                            android:paddingRight="@dimen/spacing_xlarge"
                            android:hint="@string/mm_hh"
                            android:layout_weight="1"

                            android:clickable="true"
                            android:textAppearance="@android:style/TextAppearance.Medium"
                            android:textColor="@color/grey_1000"
                            android:focusable="true" />
                    </RelativeLayout>


                    <TextView
                        android:id="@+id/importanceText"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_margin="5dp"
                        android:text="@string/importance_from_1_to_10"
                        android:textAppearance="@android:style/TextAppearance.Medium" />


                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/importance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_large"
                        android:max="10"
                        android:progress="2"
                        android:thumb="@drawable/seek_thumb_primary_outline" />

                    <Button
                        android:id="@+id/repeat_pick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/spacing_xlarge"
                        android:paddingRight="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:text="@string/repeat_every"
                        android:background="@drawable/btn_rounded_accent"
                        android:textColor="@color/grey_900"
                        android:clickable="true"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:focusable="true" />
                    <com.hootsuite.nachos.NachoTextView
                        android:id="@+id/et_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:editable="false"
                        android:background="@android:color/transparent">
                    </com.hootsuite.nachos.NachoTextView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_middle" />

                    <Switch
                        android:id="@+id/newRemaider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:text="@string/add_a_remainder"
                        android:textColor="@color/grey_900"
                        android:background="@drawable/btn_rounded_accent"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:focusable="true" />
                    <android.support.v7.widget.RecyclerView

                        android:id="@+id/remaider_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        />
                    <Switch
                        android:id="@+id/newAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:text="@string/add_a_alert"
                        android:textColor="@color/grey_900"
                        android:background="@drawable/btn_rounded_accent"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:focusable="true" />
                    <android.support.v7.widget.RecyclerView

                        android:id="@+id/alarm_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                   />
                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>